<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.kimayadesai.quizapp.LoginActivity">

    <Button
        android:id="@+id/facebookButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="132dp"
        android:text="@string/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/googleButton"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="60dp"
        android:text="@string/googleButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/facebookButton" />

    <Button
        android:id="@+id/emailButton"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:layout_marginBottom="111dp"
        android:layout_marginEnd="52dp"
        android:layout_marginStart="82dp"
        android:layout_marginTop="60dp"
        android:text="@string/emailButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/googleButton" />
</android.support.constraint.ConstraintLayout>
