<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    tools:context="com.example.kimayadesai.quizapp.MainActivity">

    <Button
        android:id="@+id/logInButton"
        android:layout_width="99dp"
        android:layout_height="35dp"
        android:layout_marginEnd="148dp"
        android:layout_marginStart="148dp"
        android:layout_marginTop="4dp"
        android:text="@string/logInButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextView" />

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="200dp"
        android:layout_height="53dp"
        android:layout_marginEnd="121dp"
        android:layout_marginStart="126dp"
        android:layout_marginTop="32dp"
        android:text="@string/titleTextView"
        android:textAlignment="center"
        android:textAllCaps="true"

        android:textSize="15pt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.528"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="141dp"
        android:layout_height="24dp"
        android:layout_marginBottom="68dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="72dp"
        android:text="@string/signUpInstruction"
        android:textSize="7pt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/signUpButton"
        app:layout_constraintHorizontal_bias="0.7"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logInButton"
        app:layout_constraintVertical_bias="0.812" />

    <Button
        android:id="@+id/signUpButton"
        android:layout_width="95dp"
        android:layout_height="37dp"
        android:layout_marginBottom="80dp"
        android:layout_marginEnd="40dp"
        android:text="@string/signUpButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="137dp"
        android:layout_height="126dp"
        android:layout_marginBottom="50dp"
        android:layout_marginEnd="123dp"
        android:layout_marginStart="124dp"
        android:layout_marginTop="54dp"
        android:contentDescription="TODO"
        app:layout_constraintBottom_toTopOf="@+id/viewPager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@mipmap/ic_launcher_round" />

    <android.support.v4.view.ViewPager

        android:id="@+id/viewPager"
        android:layout_width="wrap_content"
        android:layout_height="105dp"
        android:layout_marginTop="328dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"

        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </android.support.v4.view.ViewPager>


</android.support.constraint.ConstraintLayout>
